Fix subhead contrast to improve Lighthouse accessibility score

--- a/_sass/_global.scss
+++ b/_sass/_global.scss
@@ -29,7 +29,7 @@ h3 {
 
 .content-subhead {
   border-bottom: 1px solid #eee;
-  color: #aaa;
+  color: #595959;
   font-size: 80%;
   font-weight: 500;
   letter-spacing: 0.1em;
